# ideot

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
docs/superpowers/plans/: 2026-05-29-terminal-code-editor.md  2026-06-03-mouse-clipboard-undo-redo.md
docs/superpowers/specs/: 2026-05-27-lsp-design.md  2026-05-29-terminal-code-editor-design.md  2026-06-03-mouse-clipboard-undo-redo-design.md
src/: app.rs  buffer.rs  editor.rs  fs.rs  git.rs  highlight.rs  input.rs  lib.rs  lsp.rs  main.rs  marks.rs  runtime.rs  search.rs  settings.rs  theme.rs  ui.rs
src/app/: command.rs
src/lsp/: client.rs  diagnostics.rs  discover.rs  mod.rs  protocol.rs
tests/: buffer_editing.rs  editor_navigation.rs  file_actions.rs  file_index.rs  file_search_and_completion.rs  focus_behavior.rs  footer_help.rs  git_browser.rs  highlight_and_explorer.rs  lsp_actions.rs  lsp_diagnostics_panel.rs  lsp_hover.rs  lsp_hover_focus.rs  lsp_ux.rs  marks.rs  mouse_input.rs  open_edit_save.rs  render_scheduler.rs  search_recent.rs  selection.rs  settings.rs  undo_redo.rs
