[package]
name = "ideot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
ignore = "0.4"
nucleo-matcher = "0.3"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-md = "0.3"
streaming-iterator = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
insta = "1"
