[package]
name = "ideot"
version = "0.9.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
ignore = "0.4"
nucleo-matcher = "0.3"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-md = "0.3"
streaming-iterator = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
tree-sitter-json = "0.24.8"
tree-sitter-bash = "0.25.1"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-cpp = "0.23.4"
tree-sitter-c = "0.24.2"
tree-sitter-lua = "0.5.0"

[dev-dependencies]
tempfile = "3"
insta = "1"
